fix: [Navbar] Apply letter-spacing to nav links fix: [Navbar] Update username font-size & line-height

--- a/src/components/Navbar/navbar.less
+++ b/src/components/Navbar/navbar.less
@@ -15,6 +15,7 @@
 
   .nav-item {
     margin-right: @space-xl;
+    letter-spacing: 1px;
   }
 
   .user-actions :last-child {
@@ -40,7 +41,9 @@
   }
 
   .username {
+    font-size: 16px;
     margin-right: @space-xl;
     font-weight: 400;
+    line-height: 22px;
   }
 }
